fix bg with graphic - not overlap the content on top

--- a/web/themes/utmusic/components/04-layouts/section/_section_backgrounds.scss
+++ b/web/themes/utmusic/components/04-layouts/section/_section_backgrounds.scss
@@ -1,6 +1,7 @@
 .theme--dark-blue-bg {
   .l-section__background {
     background-color: palette(black, 200);
+    z-index: -1;
 
     img {
       opacity: 20%;
@@ -8,7 +9,7 @@
       height: 100%;
       object-fit: cover;
       mix-blend-mode: hard-light;
-
+      pointer-events: none;
     }
   }
 }
@@ -18,6 +19,7 @@
 
   .l-section__background {
     background-color: palette(teal, 1000);
+    z-index: -1;
 
     img {
       opacity: 40%;
@@ -25,6 +27,7 @@
       height: 100%;
       object-fit: cover;
       mix-blend-mode: color-burn;
+      pointer-events: none;
     }
   }
 }
@@ -34,6 +37,7 @@
 
   .l-section__background {
     background-color: palette(teal, 1000);
+    z-index: -1;
 
     img {
       opacity: 40%;
@@ -41,6 +45,7 @@
       height: 100%;
       object-fit: cover;
       mix-blend-mode: color-burn;
+      pointer-events: none;
     }
   }
 }
@@ -50,6 +55,7 @@
 
   .l-section__background {
     background-color: palette(teal, 1000);
+    z-index: -1;
 
     img {
       opacity: 40%;
@@ -57,6 +63,7 @@
       height: 100%;
       object-fit: cover;
       mix-blend-mode: color-burn;
+      pointer-events: none;
     }
   }
 }
